name:                serum
version:             0.1.0.0
description:         Benchmark for Cheney copying versus serialization
license-file:        LICENSE
author:              Edward Z. Yang
maintainer:          ezyang@cs.stanford.edu
category:            GHC
build-type:          Simple
cabal-version:       >=1.10

executable serum
  main-is: Main.hs
  build-depends:       base == 4.*, deepseq, binary, bytestring, criterion, ghc-prim
  c-sources: cbits/cheneycopy.c cbits/cheneycopy-prim.cmm
  default-language:    Haskell2010
  ghc-options: -O2 -debug -rtsopts -DDEBUG
  cc-options: -g -O2 -DDEBUG
